Última tarefa essencial de relatório implementada, além de uma pequena revisão e organizada no código em geral.